update project (^) 加註解 code refactoring (^) 新增參考座標 API

--- a/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
+++ b/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GeoDataGridViewManager.cs" />
     <Compile Include="MessageDisplayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RefCoordinate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
