--- a/ViewROI/ViewROI.csproj
+++ b/ViewROI/ViewROI.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunctionPlot.cs" />
+    <Compile Include="Interface\IContinueZoom.cs" />
     <Compile Include="Interface\IProg.cs" />
     <Compile Include="MeasureParameter.cs" />
     <Compile Include="Model\PositionModel.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="ROIRectangle1.cs" />
     <Compile Include="ROIRectangle2.cs" />
     <Compile Include="ROIViewModel.cs" />
+    <Compile Include="SmartROIs\PointsLine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
