--- a/MeasureModule/MeasureModule.csproj
+++ b/MeasureModule/MeasureModule.csproj
@@ -105,12 +105,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolver\MeasureViewModelResolver.cs" />
     <Compile Include="ResultDisplayViewModel.cs" />
+    <Compile Include="SmartMeasurements\AutoFitPoint.cs" />
     <Compile Include="ViewModel\GeoDataGridViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hanbo.Custom.Attribute\Hanbo.Custom.Attribute.csproj">
       <Project>{f615c268-d194-4b8e-9d2a-04cad755988e}</Project>
       <Name>Hanbo.Custom.Attribute</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hanbo.Extensions\Hanbo.Extensions.csproj">
+      <Project>{8ef04c32-1282-4008-a062-e34ba0750459}</Project>
+      <Name>Hanbo.Extensions</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
       <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
@@ -130,6 +135,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
