(+) 新增軸擺正物件

--- a/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
+++ b/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
@@ -50,6 +50,7 @@
     <Compile Include="MessageDisplayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RefCoordinate.cs" />
+    <Compile Include="RefSkew.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
