(+)ColorMM.cs (顏色解析) (^) Code Refactoring (ConfigurationMM.cs)

--- a/Hanbo.AOM.Configuration/Hanbo.AOM.Configuration.csproj
+++ b/Hanbo.AOM.Configuration/Hanbo.AOM.Configuration.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorMM.cs" />
     <Compile Include="ConfigurationMM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\UnitViewModel.cs" />
