--- a/Hanbo.Resources/Hanbo.Resources.csproj
+++ b/Hanbo.Resources/Hanbo.Resources.csproj
@@ -177,6 +177,18 @@
   <ItemGroup>
     <None Include="Resources\connect.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\draw_smart_arc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\draw_arc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\draw_smart_circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\draw_arc1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
