(+) 新增 HWindowSettingViewModel.cs (視窗設定參數)

--- a/Hanbo.Models/Hanbo.Models.csproj
+++ b/Hanbo.Models/Hanbo.Models.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Argument\AutoExportArgument.cs" />
     <Compile Include="CameraSpecViewModel.cs" />
     <Compile Include="ExportMacroPlanViewModel.cs" />
+    <Compile Include="HWindowSettingViewModel.cs" />
     <Compile Include="LanguageViewModel.cs" />
     <Compile Include="LightDTO.cs" />
     <Compile Include="LightViewModel.cs" />
