--- a/Hanbo.Image.Grab/Hanbo.Image.Grab.csproj
+++ b/Hanbo.Image.Grab/Hanbo.Image.Grab.csproj
@@ -35,12 +35,16 @@
     <Reference Include="halcondotnet">
       <HintPath>C:\Program Files\MVTec\HALCON-10.0\bin\dotnet35\halcondotnet.dll</HintPath>
     </Reference>
-    <Reference Include="PylonC.NET, Version=3.0.0.2900, Culture=neutral, PublicKeyToken=a77e8471c5919d5a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\Basler\pylon 2.3\pylonc.net\bin\PylonC.NET.dll</HintPath>
+    <Reference Include="PylonC.NET, Version=4.1.0.0, Culture=neutral, PublicKeyToken=a77e8471c5919d5a, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\aom-winapp\packages\PylonC.NET.4.1.0.0\lib\net20\PylonC.NET.dll</HintPath>
+    </Reference>
+    <Reference Include="PylonC.NETSupportLibrary">
+      <HintPath>..\..\aom-winapp\packages\PylonC.NETSupportLibrary.1.0.0\lib\net20\PylonC.NETSupportLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +61,7 @@
     <Compile Include="IGrab.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HalconGrabber.cs" />
+    <Compile Include="PylonDriver\PylonGrabImageWorkingMan.cs" />
     <Compile Include="SmartWorkingMan.cs" />
     <Compile Include="WorkingManStatus.cs" />
   </ItemGroup>
