--- a/Hanbo.Image.Grab/packages.config
+++ b/Hanbo.Image.Grab/packages.config
@@ -3,4 +3,6 @@
   <package id="NLog" version="2.1.0" targetFramework="net40" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net40" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net40" />
+  <package id="PylonC.NET" version="4.1.0.0" targetFramework="net40" />
+  <package id="PylonC.NETSupportLibrary" version="1.0.0" targetFramework="net40" />
 </packages>
